<resources>
    <string name="app_name">LayoutPractice</string>

    <string name="hello_world">Hello world! My name is Android.</string>
    <string name="long_text">Hello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\nHello world! My name is Android. This app is written in Java, and running on Dalvik VM, not Sun VM. Nice to see you! Have fun :)\n</string>

    <string name="linear_layout1_name">Linear Layout Practice 1</string>
    <string name="linear_layout2_name">Linear Layout Practice 2</string>
    <string name="relative_layout1_name">Relative Layout Practice 1</string>
    <string name="relative_layout2_name">Relative Layout Practice 2</string>
    <string name="frame_layout1_name">Frame Layout Practice 1</string>
    <string name="frame_layout2_name">Frame Layout Practice 2</string>
    <string name="scroll_view1_name">Scroll View Practice 1</string>
</resources>
